--- a/index.html
+++ b/index.html
@@ -13,5 +13,21 @@
         </div>
     </div>
     
+    <div class="container1">
+            <div class="clock">
+
+                <div id="time"><div>
+                <div id="ampm"><div>
+
+            </div>
+            <div class="alarm">
+                <label for="alarmTime">Hora de alarma</label>
+
+                <input type="time" id="alarmTime">
+                <button onclick="setAlarm()">Configurar alarma</button> 
+
+
+            </div>
+    </div>
 </body>
 </html>
