--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reloj_digital</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div class="contenido-header">
@@ -14,19 +14,16 @@
     </div>
     
     <div class="container1">
-            <div class="clock">
+        <div class="clock">
 
                 <div id="time"><div>
                 <div id="ampm"><div>
 
-            </div>
+        </div>
             <div class="alarm">
                 <label for="alarmTime">Hora de alarma</label>
-
                 <input type="time" id="alarmTime">
                 <button onclick="setAlarm()">Configurar alarma</button> 
-
-
             </div>
     </div>
 
