--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+ <div class="todo">
     <div class="contenido-header">
         <div class="fondo" id="fondo">
             <h1 class="texto">Reloj Digital Alarma</h1>
@@ -27,7 +28,7 @@
                 <button onclick="setAlarm()">Configurar alarma</button> 
             </div>
     </div>
-
+ </div>
 <script src="./script.js"></script>
 
 </body>
