--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reloj_digital</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
  <div class="todo">
@@ -23,13 +23,13 @@
         </div>
     
             <div class="alarm">
-                <label for="alarmTime">Hora de alarma</label>
+                <label for="alarmTime">Hora de alarma:</label>
                 <input type="time" id="alarmTime">
                 <button onclick="setAlarm()">Configurar alarma</button> 
             </div>
     </div>
  </div>
-<script src="./script.js"></script>
+<script src="./js/script.js"></script>
 
 </body>
 </html>
