--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reloj_digital</title>
+    <title>Reloj digital</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
  <div class="todo">
     <div class="contenido-header">
         <div class="fondo" id="fondo">
-            <h1 class="texto">Reloj Digital Alarma</h1>
+            <h1 class="texto">Reloj digital con alarma</h1>
         </div>
     </div>
     
@@ -29,7 +29,8 @@
             </div>
     </div>
  </div>
-<script src="./js/script.js"></script>
+ 
+<script src="/js/script.js"></script>
 
 </body>
 </html>
