--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="container1">
         <div class="clock">
 
-                <div id="time"><div>
-                <div id="ampm"><div>
+                <div id="time"></div>
+                <div id="ampm"></div>
 
         </div>
     
