--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="alarm">
                 <label for="alarmTime">Hora de alarma:</label>
                 <input type="time" id="alarmTime">
-                <button onclick="setAlarm()">Configurar alarma</button> 
+                <button onclick="setAlarm()">Elije la hora de alarma en el 🕢 luego oprime este botón para activar </button> 
             </div>
     </div>
  </div>
