--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-<div class="todo222">
+<div class="todo">
     <div class="contenido-header">
         <div class="fondo" id="fondo">
             <h1 class="texto">Reloj digital con alarma</h1>
